--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,17 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <style>
-          #header_img { display: block; position: absolute; left: 0; } 
+          #header_img {
+            border: none;
+            box-shadow: none;
+          }
+          #project_title {    
+            position: absolute;
+            margin-top: -245px;
+            padding-left: 25px;
+            color: #333;
+            text-shadow: none;
+          } 
         </style>
           
         <header class="inner">
