--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
           } 
         </style>
 
-        <header class="inner">
+        <header class="_inner">
           <img id="header_img" src="assets/images/austin-for-everyone.png" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
         </header>
