--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
           #header_img {
             border: none;
             box-shadow: none;
+            width: 100%;
           }
           #project_title {    
             position: absolute;
