--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         </style>
 
         <header class="inner">
-          <img id="header_img" src="assets/images/austin-for-everyone.png" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
+          <img id="header_img" src="https://raw.githubusercontent.com/Austin-For-Everyone/Austin-For-Everyone/master/assets/images/austin-for-everyone.png" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
         </header>
     </div>
