--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div id="main_content_wrap" class="outer" width="1200px">
+      <section id="main_content" class="inner" width="1000px">
         {{ content }}
       </section>
     </div>
