--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,10 @@
             padding-left: 25px;
             color: #333;
             text-shadow: none;
+            
+           .inner {
+              max-width: 1280px;
+            }
           } 
         </style>
 
@@ -36,8 +40,8 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" width="1200px">
-      <section id="main_content" class="inner" width="1000px">
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         {{ content }}
       </section>
     </div>
