--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           color: #333;
           text-shadow: none;
 
-         .inner {
+         #main_content {
             max-width: 1280px;
           }
         } 
