--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,6 @@
           padding-left: 25px;
           color: #333;
           text-shadow: none;
-
-         #main_content {
-            max-width: 1280px;
-          }
         } 
       </style>
     <div id="header_wrap" class="outer">
@@ -41,7 +37,7 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner" width="1280px">
+      <section id="main_content" class="inner">
         {{ content }}
       </section>
     </div>
