--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,14 +7,14 @@
   border: none;
   box-shadow: none;
   width: 100%;
-  max-width: 960px
+  max-width: none
 }
 
 #project_title {    
   position: absolute;
   margin-top: -245px;
   padding-left: 25px;
-  color: #333;
+  color: white;
   text-shadow: none;
 } 
 
