--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,8 @@
   border: none;
   box-shadow: none;
   width: 100%;
-  max-width: none
-    padding: none
+  max-width: none;
+  padding: none;
 }
 
 #project_title {    
